libhid ChangeLog
================

2005-02-20  Martin F. Krafft (libhid@pobox.madduck.net)
	- Removed dependency on libswigpy, which is deprecated.
	- integrated more patches by Andreas Jochens <aj@andaco.de> to fix
	  compilation issues with gcc 4. Thanks, Andreas!

2004-11-10  Martin F. Krafft (libhid@pobox.madduck.net)

	- integrated patch by Andreas Jochens <aj@andaco.de> to fix compilation
		issues on 64bit machines (amd64 specifically). Thanks, Andreas!

2004-11-09  Martin F. Krafft (libhid@pobox.madduck.net)

	- fixed autotools setup to honour CFLAGS on the ./configure and ./autogen.sh
		line appropriately.
	- added *.s and *.i to clean target
	- now outputs variables used for build to stdout
	- added Arnaud Quette as Debian co-maintainer
	- added explanatory comments to test code on how to match, open, read, and
		write.
	- commented custom matcher, but left it in.
	- made all of the code (well, except) swig warning-free
	- disabled -pedantic (per default), but added -Werror (per default)
		(use --enable-pedantic and --disable-werror to change)
	- added special handling for -Werror to swig code, which can't have it set
	- added GCC handling for unused parameters
	- updated TODO list
	- added prelimiary python test code (does not read/write yet).
	- added src/libhid_detach_device.c, a simple programme (installed to
		$prefix/bin) which can detach devices to make lsusb -vvv work.

2004-09-15  Martin F. Krafft (libhid@pobox.madduck.net)

	- Fixed several non-POSIX uses of regular expressions in autotools files
	- Replaced expr by $((...)) shell semantics
	- Added override for autoconf Swig version check

2004-09-10  Martin F. Krafft (libhid@pobox.madduck.net)

	- Changed list addresses and contact information.
	- Added a preliminary webpage for libhid: doc/www/index.html
	- Debian: Added suggestion for pkg-config for libhid-dev.
	- Debian: Removed suggestion for pkg-config from libhid0.

2004-09-09  Martin F. Krafft (libhid@pobox.madduck.net)
