@@ -3,13 +3,9 @@ ACLOCAL_AMFLAGS = -I m4
 
 dist_man1_MANS = libhid-detach-device.1
 
-#TODO: must be determined automatically...
-DB2MAN = /usr/share/sgml/docbook/stylesheet/xsl/nwalsh/manpages/docbook.xsl
-#DB2MAN = /sw/share/xml/xsl/docbook-xsl/manpages/docbook.xsl
-#DB2MAN = /usr/share/sgml/docbook/xsl-stylesheets/manpages/docbook.xsl
 XP = xsltproc -''-nonet
 %.1: %.dbk
-	$(XP) $(DB2MAN) $<
+	$(XP) $(DB2MAN_FILE) $<
 
 maintainerclean-local:
 	rm -f ${wildcard *.[0-9]}
