@@ -1,6 +1,10 @@
 libhid ChangeLog
 ================
 
+2005-02-25  Martin F. Krafft (libhid@pobox.madduck.net)
+	- Added $PATH-style docbook stylesheet autodetection, inspired by Kevin
+		Godby. Thanks, Kevin!
+
 2005-02-20  Martin F. Krafft (libhid@pobox.madduck.net)
 	- Removed dependency on libswigpy, which is deprecated.
 	- integrated more patches by Andreas Jochens <aj@andaco.de> to fix
